--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("flir_image.jpeg");
+    background-image: url("MainBackgroundImage.jpeg");
     background-color: #cccccc;
     text-align: center;
     height: 900px; /* You must set a specified height */
