--- a/main.css
+++ b/main.css
@@ -1,18 +1,28 @@
 body {
     background-image: url("MainBackgroundImage.jpeg");
-    background-color: #cccccc;
+    background-color: white;
     text-align: center;
-    height: 900px; /* You must set a specified height */
-    background-position: center; /* Center the image */
+    height: 1080px;
+    /* width: 1080px; You must set a specified height */
+    /* background-size: 900px; */
     background-repeat: no-repeat; /* Do not repeat the image */
+    background-position-y: top;
+    background-position-x: center;
     background-attachment: fixed;
-    background-size: cover; /* Resize the background image to cover the entire container */
+    background-size: contain;
+    /* opacity: .5; */
 }
 
 #leftDiv {
     float: left;
     width: 49%;
     border: 2px solid black;
+    opacity: .8;
+}
+
+#leftDiv:hover {
+    background-color: gray;
+    opacity: .8;
 }
 
 #rightDiv {
@@ -31,13 +41,14 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     size: 20pt;
+    /* background-color: gray ; */
 }
 
 #statTitle {
     flex: 0 0 19%; 
     border: 2px dotted black;
     padding: 0;
-    margin: 0
+    margin-top: 10px
 }
 
 #statValue {
