--- a/main.css
+++ b/main.css
@@ -31,6 +31,11 @@ body {
     border: 2px solid black;   
 }
 
+#rightDiv:hover{
+    background-color: gray;
+    opacity: .8;
+}
+
 /* #charSelectDiv {
     display: flex;
     flex-direction: column;
