Print version update

--- a/main.css
+++ b/main.css
@@ -193,3 +193,15 @@ body {
     grid-template-columns: 30% 5% 5% 5% 5% 50%;
     border: 1px solid black;
 }
+
+.pEquipStatDiv{
+    display: grid;
+    grid-template-columns: 30% 15% 5% 50%;
+    /* border: 1px solid black; */
+}
+
+.pEquipStatTitleDiv{
+    display: grid;
+    grid-template-columns: 30% 15% 5% 50%;
+    /* border: 1px solid black; */
+}
